...

  return (
    <View>
      {currentUser.id && <Text testID="welcomeMessage">{currentUser.uid}</Text>}
      {message && (
        <Text
          testID="successfullyCreatedMessage"
          style={styles.assignmentCreateMessage}
        >
          {message}
        </Text>
      )}
      <Item>
...
        >
          <Icon name="home" />
        </Button>

        <Button
          icon
          testID="createAssignmentButton"
          onPress={() => props.navigation.navigate("assignmentForm")}
          style={styles.createButton}
        >
          <Icon name="folder" />
          <Text>Create Assignment</Text>
        </Button>
...
