...
      <Text>{message && <Text>{message}</Text>}</Text>
      {!authenticated && (
        <View>
          <Button
            style={styles.becomeDeveluper}
            full
            testID="navigationButton"
            onPress={() => navigation.navigate("develuperSignup")}
          >
            <Text>I want to become a develUper!</Text>
          </Button>
          <Button
            style={styles.becomeDeveluper}
...
