...
            />
          </Container>
        </>
      )}
      {currentUser.role === "develuper" && !applied && (
        <Button
          testID="applyButton"
          bordered
          info
          style={styles.develupersButtons}
          onPress={() => applyHandler()}
        >
          <Text style={styles.buttonsText}>Apply now!</Text>
...
      )}
      {currentUser.role === "develuper" && applied && (
        <Button
          bordered
          success
          style={styles.develupersButtons}
          testID="successfullyAppliedMessage"
          onPress={() => navigation.navigate("develUp")}
        >
          <Icon success name="checkbox" />
          <Text style={styles.buttonsText}>
            You have Applied! Keep Browsing
          </Text>
...
