...
    <>
      <Card>
        <CardItem header bordered style={styles.firstCard}>
          <Left>
            <Icon name="person" style={styles.person} />
            <Body>
              <Text testID="develuperName" style={styles.title}>
                {develuperProfile.name}
              </Text>
            </Body>
          </Left>
        </CardItem>
        <CardItem footer bordered style={styles.container}>
          <Icon name="paper" style={styles.points} />
          <Left testID="points">
            <Text note style={styles.titleProjects}>
              Level:
            </Text>
            <Badge primary>
              <Text>{develuperProfile.level}</Text>
            </Badge>
          </Left>
          <Left>
...
